--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "happyfri",
+  "name": "dist",
   "version": "1.0.2",
   "description": "vue2-happyfri",
-  "author": "cangdu <1264889788@qq.com>",
+  "author": "3454812158",
   "private": true,
   "scripts": {
     "dev": "node build/dev-server.js",
